# Project1-TET

./: COMANDOS_VALIDACION_LOCAL.md  COMANDOS_VALIDACION_SUSTENTACION.md  DIAGNOSTICO_COMUNICACION.md  GUIA_SUSTENTACION_GRIDMR.md  README.md  VALIDACION_AWS.md  docker-compose.yml  start_gridmr_system.ps1  test_aws_connectivity.ps1  test_grpc_communication.ps1  test_master_simple.ps1  validacion_sistema.ps1  validate_aws_final.ps1
aws-deployment/: README-AWS.md  ec2-nfs-client.sh  ec2-nfs-server.sh  efs-setup.sh
client/: client.py  requirements.txt  test_input.txt
gridmr-master/: README.md  pom.xml
gridmr-master/protobuf/: common.proto  master.proto
gridmr-master/src/main/java/com/gridmr/master/: GridMRMaster.java  GridMRMasterApplication.java
gridmr-master/src/main/proto/: master_internal.proto
gridmr-master/src/main/proto/worker/: worker_service.proto
gridmr-master/src/main/proto/worker/common/: job_types.proto
gridmr-master/src/main/resources/: logback.xml
scripts/: mount_nfs_client.sh  setup_nfs_server.sh  start_system.ps1
serv_persistor/: Dockerfile  client_communication_pb2.py  client_communication_pb2_grpc.py  main.py
serv_persistor/env/: pyvenv.cfg
serv_persistor/env/Scripts/: activate  activate.bat
serv_persistor/protobufs/: client_communication.proto  worker.proto
serv_persistor/src/main/java/com/gridmr/master/: GridMRMaster.java
serv_persistor/src/main/resources/: logback.xml
workers/: CMakeLists.txt  Makefile  WorkerServer.cpp  validate_aws_deployment.ps1  validate_aws_deployment.sh  worker.proto
workers/src/: worker.cpp
(+43 files in other folders)
